--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
     "expo": "^53.0.5",
-    "expo-font": "~13.3.0",
+    "expo-font": "~13.3.1",
     "expo-splash-screen": "~0.30.8",
     "expo-status-bar": "~2.2.3",
     "metro": "^0.82.0",
@@ -37,6 +37,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~19.0.10",
+    "@types/react-native-vector-icons": "^6.4.18",
     "typescript": "^5.3.3"
   },
   "private": true
