--- a/app.json
+++ b/app.json
@@ -15,6 +15,9 @@
     "ios": {
       "supportsTablet": true
     },
+    "experimental": {
+      "newArchitecture": false
+    },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
